# libcubescript

./: .gitattributes  .gitignore  COPYING.md  Makefile  README.md  command.cc  command.hh  cs_gen.cc  cs_private.hh  cs_util.cc  cs_util.hh  cs_val.cc  cs_vm.cc  cs_vm.hh  cubescript.cc  cubescript.hh  cubescript_conf.hh  lib_base.cc  lib_list.cc  lib_list.hh  lib_math.cc  lib_str.cc  meson.build  meson_options.txt  repl.cc
.ci/: README.md  build-cs  build-cs-windows  install-env  install-env-windows
.github/workflows/: build.yaml
doc/: Doxyfile  main_page.md
docs/: patch-linenoise.c.diff  patch-linenoise.h.diff
include/: meson.build
include/cubescript/: cubescript.hh  cubescript_conf.hh  cubescript_conf_user.hh
include/cubescript/cubescript/: callable.hh  error.hh  ident.hh  platform.hh  state.hh  util.hh  value.hh
src/: cs_bcode.cc  cs_bcode.hh  cs_error.cc  cs_error.hh  cs_gen.cc  cs_gen.hh  cs_ident.cc  cs_ident.hh  cs_lock.hh  cs_parser.cc  cs_parser.hh  cs_state.cc  cs_state.hh  cs_std.cc  cs_std.hh  cs_strman.cc  cs_strman.hh  cs_thread.cc  cs_thread.hh  cs_util.cc  cs_util.hh  cs_val.cc  cs_vm.cc  cs_vm.hh  cubescript.cc  lib_base.cc  lib_list.cc  lib_math.cc  lib_str.cc  meson.build
subprojects/: libostd.wrap
tests/: meson.build  runner.cc  simple.cube
tools/: edit_fallback.hh  edit_libedit.hh  edit_linenoise.hh  edit_readline.hh  linenoise.cc  linenoise.hh  meson.build  repl.cc
