option('repl',
    type: 'feature',
    value: 'auto',
    description: 'Enable the REPL (command line tool)'
)

option('readline',
    type: 'feature',
    value: 'auto',
    description: 'Use GNU readline for the REPL'
)

option('linenoise',
    type: 'feature',
    value: 'auto',
    description: 'Use linenoise for the REPL'
)
