option('repl',
    type: 'feature',
    value: 'auto',
    description: 'Enable the REPL (command line tool)'
)

option('linenoise',
    type: 'feature',
    value: 'auto',
    description: 'Use linenoise for the REPL'
)

option('tests',
    type: 'boolean',
    value: 'true',
    description: 'Whether to build tests'
)

option('tests_cross',
    type: 'boolean',
    value: 'false',
    description: 'Whether to build tests when cross-compiling'
)
