libcubescript_headers = [
    'cubescript/cubescript.hh',
    'cubescript/cubescript_conf.hh',
    'cubescript/cubescript_conf_user.hh',
    'cubescript/cubescript/callable.hh',
    'cubescript/cubescript/error.hh',
    'cubescript/cubescript/ident.hh',
    'cubescript/cubescript/platform.hh',
    'cubescript/cubescript/state.hh',
    'cubescript/cubescript/util.hh',
    'cubescript/cubescript/value.hh',
]

install_headers(libcubescript_headers, install_dir: dir_package_include)
